# AudioScript

./: AudioScript.pro  CMakeLists.txt  DefaultCppHeader.hpp  DefaultCppSource.cpp  Doxyfile  Makefile  README.md  about.txt  applicationoutput.h  audioscript.cpp  audioscript.h  audioscriptcompiler.cpp  audioscriptengine.h  audioscriptlibrary.cpp  audioscriptlibrary.h  audioscriptvariant.cpp  audioscriptvariant.h  classloader.cpp  classloader.h  codeeditor.cpp  codetabs.h  common.pri  compiler.h  dialogs.cpp  dialogs.h  doxygen.txt  engine.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  todo.txt
ASUtils/: ASUtils.pro  AudioScript  Makefile  audioformat.cpp  audioformat.h  audioscript.cpp  audioscript.h  audioscriptbuffer.cpp  audioscriptbuffer.h  audioscriptbuffer_p.h  audioscriptexception.cpp  audioscriptexception.h  audioscriptfactory.cpp  audioscriptfactory.h  audioscriptlog.cpp  audioscriptlog.h  audioscriptproperty.cpp  audioscriptproperty.h  audioscriptui.cpp  audioscriptui.h  audioscriptui_p.cpp  audioscriptui_p.h  audioscriptutils.cpp  audioscriptutils.h  buffer.cpp  buffer.h  buffer.tpp  bufferdata_p.cpp  bufferdata_p.h  exception.cpp  exception.h  factory.cpp  factory.h  globals.cpp  globals.h  log.cpp  log.h  moc_log.cpp  package.cpp  package.h  (+6 more)
App/: App.pro  Makefile  qrc_resources.cpp  qrc_style.cpp  ui_mainwindow.h  ui_scriptwindow.h
Backend/: audioscript.cpp  audioscript.h  audioscriptcompiler.cpp  audioscriptcompiler.h  audioscriptengine.cpp  audioscriptengine.h  audioscriptlibrary.cpp  audioscriptlibrary.h  audioscriptvariant.cpp  audioscriptvariant.h  (+3 more)
(+985 files in other folders)
